Task2/Api/src/Gateway/Envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: weather_app_route
                  virtual_hosts:
                    - name: weather_app
                      domains:
                        - "*"
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: "GET, POST, PUT, DELETE"
                        allow_headers: "authorization, content-type, x-requestid, x-requested-with, x-signalr-user-agent"
                        allow_credentials: true
                      routes:
                        - name: "weather-api"        
                          match:
                            prefix: "/api"
                          route:
                            timeout: 0s
                            cluster: weather-api 
                        - name: "weather-ui"
                          match:
                            prefix: "/"
                          route:
                            timeout: 0s
                            cluster: weather-ui
                http_filters:
                  - name: envoy.cors
                  - name: envoy.router
                access_log:
                  - name: envoy.file_access_log
                    filter:
                      not_health_check_filter: {}
                    config:
                      json_format:
                        time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_method: "%REQ(:METHOD)%"
                        request_host: "%REQ(HOST)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        response_flags: "%RESPONSE_FLAGS%"
                        route_name: "%ROUTE_NAME%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                      path: "/tmp/access.log"
  clusters:
    - name: weather-ui
      connect_timeout: 600s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: weather-ui
            port_value: 80
    - name: weather-api
      connect_timeout: 600s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: weather-api
            port_value: 8080
